<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dip" 
    android:layout_height="wrap_content"
    android:padding="5dip"
    android:background="@drawable/layout_style" >
    <TextView
        android:id="@+id/tv_top" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffff6a6a"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:singleLine="true"
        android:layout_margin="5dip"
        android:text="@string/game_over"/>
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_top"
        android:layout_marginBottom="35dip"
        android:scrollbars="none">
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#ff3cb371"
	        android:textSize="15sp"
	        android:gravity="center_horizontal"
	        android:text="@string/prompt_message"/>
	</ScrollView>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
	    <Button
	        android:id="@+id/again"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:background="@drawable/button_green_select"
		    android:textColor="@color/white"
		    android:layout_marginRight="3dip"
		    android:singleLine="true"
		    android:text="@string/again"/>
	    <Button 
	        android:id="@+id/end"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:background="@drawable/button_red_select"
	        android:textColor="@color/white"
	        android:layout_marginLeft="3dip"
	        android:singleLine="true"
	        android:text="@string/quit_game"/>
	</LinearLayout>
</RelativeLayout>






