<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:background="@drawable/bg_splash">
    <RelativeLayout 
	    android:id="@+id/head_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	    <Button 
	        android:id="@+id/homebtn"
	        android:layout_width="60dip"
	        android:layout_height="40dip"
	        android:background="@drawable/btn_back_select"
	        android:paddingLeft="3dip"
	        android:layout_margin="5dip"
	        android:textColor="@color/white"
	        android:layout_centerVertical="true"
	        android:text="@string/btn_back"/>
	     <TextView 
	  	    android:layout_width="fill_parent"
	  	    android:layout_height="wrap_content"
	  	    android:textSize="20sp"
	  	    android:padding="5dip"
	  	    android:textColor="@color/white"
	  	    android:gravity="center_horizontal"
	  	    android:layout_centerVertical="true"
	  	    android:text="@string/more_title"/>
    </RelativeLayout>
	<LinearLayout 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	  	android:orientation="vertical"
	  	android:layout_margin="20dip"
	  	android:layout_centerInParent="true"
	  	android:background="@drawable/more_list_item">
	  	<ListView 
	  	    android:id="@+id/morelist" 
	  	    android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:cacheColorHint="#00000000"
			android:divider="#ff43cd80" 
			android:dividerHeight="0.5dip"/>
	</LinearLayout>	    
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/tv_color"
	    android:layout_marginBottom="30dip"
	    android:gravity="center_horizontal"
	    android:layout_alignParentBottom="true"
	    android:text="@string/m_platform"/>
</RelativeLayout>




