<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
		<ImageView
		  	android:id="@+id/club_image"
		  	android:layout_height="0dip"
		  	android:layout_width="fill_parent"
		  	android:gravity="top"
		  	android:layout_weight="1.0"/>
	  	<LinearLayout
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:orientation="horizontal"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:layout_marginBottom="2dip"
			android:layout_marginTop="2dip"
		  	android:gravity="bottom">
	  		<Button
			  	android:id="@+id/pageup"
			  	android:layout_width="fill_parent"
			  	android:layout_height="wrap_content"
			  	android:gravity="center"
			  	android:layout_weight="1.0"
			  	android:textColor="@color/white"
			  	android:background="@drawable/image_btn_select"
		 	  	android:text="@string/image_previous"/>
		  	<Button
			  	android:id="@+id/pagedown"
			  	android:layout_width="fill_parent"
			  	android:layout_height="wrap_content"
			  	android:gravity="center"
			  	android:textColor="@color/white"
			  	android:text="@string/image_next"
			  	android:background="@drawable/image_btn_select"
			  	android:layout_weight="1.0"/>
		  	<Button
			  	android:id="@+id/download"
			  	android:layout_width="fill_parent"
			  	android:layout_height="wrap_content"
			  	android:gravity="center"
			  	android:text="@string/image_download_sdcard"
			  	android:textColor="@color/white"
			  	android:background="@drawable/image_btn_select"
			  	android:layout_weight="1.0"/>
		</LinearLayout>
	</LinearLayout>
	<ProgressBar
		android:id="@+id/load_image_progress"
		style="@style/body_progressbar_style" />
</RelativeLayout>
